# DCA

./: .clang-format  .clang-format-ignore  .gitignore  CITATION.cff  CMakeLists.txt  README.md
.github/workflows/: build.yml  documentation.yml
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example.cpp  fd.cpp
include/DCA/: AD_PlaneToCapsule.h  AD_PlaneToPlane.h  AD_PlaneToSphere.h  AD_PointToLine.h  API.h  CapsuleDistanceObjective.h  CapsuleVsCapsule.h  ExpCoords.h  FD.h  FiniteDifference.h  Logger.h  Newton.h  NewtonOptimizer.h  Objective.h  Pair.h  Plane.h  Primitives.h  Sensitivity.h  SoftUnilateralConstraint.h  SoftUpperLimitConstraint.h  Solver.h  SphereVsCapsule.h  SphereVsSphere.h  Utils.h  dca.h  ddR.h  pair.h  primitives.h  utils.h
include/DCA/Autodiff/: AD_PlaneToCapsule.h  AD_PlaneToPlane.h  AD_PlaneToSphere.h  AD_PointToLine.h
include/DCA/Interactions/: CapsuleDistanceObjective.h  CapsuleVsCapsule.h  DCAObjective.h  PlaneVsCapsule.h  PlaneVsPlane.h  PlaneVsSphere.h  Solver.h  SphereVsCapsule.h  SphereVsSphere.h
include/DCA/Opt/: FiniteDifference.h  NewtonOptimizer.h  Objective.h  SoftUnilateralConstraint.h
include/DCA/Utils/: ExpCoords.h  FD.h  Newton.h  Primitives.h  Sensitivity.h  SoftUpperLimitConstraint.h  Utils.h  ddR.h
src/: AD_PlaneToCapsule.cpp  AD_PlaneToPlane.cpp  AD_PlaneToSphere.cpp  AD_PointToLine.cpp  API.cpp  CapsuleDistanceObjective.cpp  CapsuleVsCapsule.cpp  DCAObjective.cpp  FiniteDifference.cpp  NewtonOptimizer.cpp  Objective.cpp  Pair.cpp  PlaneVsCapsule.cpp  PlaneVsPlane.cpp  PlaneVsSphere.cpp  Primitives.cpp  SoftUnilateralConstraint.cpp  SoftUpperLimitConstraint.cpp  Solver.cpp  SphereVsCapsule.cpp  SphereVsSphere.cpp
